--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@stripe/stripe-js": "^1.54.0",
     "canvas-confetti": "^1.6.0",
     "eslint-config-next": "13.4.6",
-    "next": "13.4.6",
+    "next": "^13.4.6",
     "next-sanity": "^4.3.3",
     "next-sanity-image": "^6.1.0",
     "react": "18.2.0",
