--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.9.0",
     "sanity": "^3.12.1",
-    "stripe": "^12.9.0"
+    "stripe": "^12.9.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.22.5"
